:lipstick: add a range of values for the article's image to prevent any overflow issues

--- a/01-recut/assets/style.css
+++ b/01-recut/assets/style.css
@@ -791,6 +791,8 @@ video {
 .prose img {
 	margin-top: 2em;
 	margin-bottom: 2em;
+  /* max-width será el valor mínimo, en pantallas pequeñas ocupará como máximo el 100% mientras que en pantallas grandes crecerá como mucho hasta 28rem */
+  max-width: min(28rem, 100%);
 }
 
 .prose video {
